--- a/MVCCurrencyCalculator/MVCCurrencyCalculator.csproj
+++ b/MVCCurrencyCalculator/MVCCurrencyCalculator.csproj
@@ -144,11 +144,13 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BjoerkCurrencyController.cs" />
+    <Compile Include="Controllers\BjoerkCurrencyExchangeController.cs" />
     <Compile Include="Controllers\CurrencyController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\BjoerkCurrency.cs" />
+    <Compile Include="Models\BjoerkCurrencyExchange.cs" />
     <Compile Include="Models\Currency.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -163,6 +165,7 @@
     <Content Include="scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\BjoerkCurrency\Edit.cshtml" />
     <Content Include="Views\BjoerkCurrency\Index.cshtml" />
+    <Content Include="Views\BjoerkCurrencyExchange\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
